# SURF-ml_benchmark

./: README.md  pyproject.toml
src/surf_ml_benchmark/: common.py  mlbenchmark.py  model_commands.py
src/surf_ml_benchmark/models/lstm/: lstm.py  pytorch.py  tensorflow.py
src/surf_ml_benchmark/models/transformer/: pytorch.py  tensorflow.py  test.py  transformer.py
